--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,23 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ===============================
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.use_sql_comments=true
 
+# ================================
+# Gmail EMAIL
+# ================================
+spring.mail.username=pratiksha.shingi@gmail.com
+spring.mail.password=vihaan30
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
 
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
